tests/NormalTests/paczka1/fuzzy1/49851920.err
Error in line 3: 8n7RIaz S107 49,1
Error in line 9: qEgy A664 84,4
Error in line 7: Nye A574 42,9
Error in line 28: Nye A664 77,3
Error in line 32: S107 A574 53,3
Error in line 31: Nye S107 96,1
Error in line 30: JZgHxMC S107 53,0
Error in line 37: cwDUYUePAI A352 37,7
